fixed scrollbar pre crit

--- a/css/main.css
+++ b/css/main.css
@@ -156,6 +156,11 @@ ul {
 }
 
 /* line 171, ../scss/_base.scss */
+ul::-webkit-scrollbar {
+  display: none;
+}
+
+/* line 177, ../scss/_base.scss */
 li {
   padding: 0vw 15vw;
   display: block;
@@ -163,7 +168,7 @@ li {
   margin-bottom: 10vw;
 }
 
-/* line 178, ../scss/_base.scss */
+/* line 184, ../scss/_base.scss */
 .content {
   opacity: 0;
   height: 0;
@@ -176,7 +181,7 @@ li {
   height: 0px;
 }
 
-/* line 192, ../scss/_base.scss */
+/* line 198, ../scss/_base.scss */
 .showcontent {
   margin-top: -2vw;
   opacity: 1;
@@ -186,22 +191,22 @@ li {
   line-height: 24px;
 }
 
-/* line 206, ../scss/_base.scss */
+/* line 212, ../scss/_base.scss */
 .fact, .source {
   display: block;
 }
 
-/* line 211, ../scss/_base.scss */
+/* line 217, ../scss/_base.scss */
 .source {
   font-size: 8px;
 }
 
-/* line 216, ../scss/_base.scss */
+/* line 222, ../scss/_base.scss */
 .vis {
   font-style: italic;
 }
 
-/* line 219, ../scss/_base.scss */
+/* line 225, ../scss/_base.scss */
 .activesection {
   font-family: 'grobe';
   font-size: 4.5vw;
@@ -212,7 +217,7 @@ li {
   margin-left: 7vw;
   color: rgba(0, 255, 42, 0.6);
 }
-/* line 229, ../scss/_base.scss */
+/* line 235, ../scss/_base.scss */
 .activesection h3 {
   color: white;
   font-size: 4.5vw;
@@ -223,7 +228,7 @@ li {
   border-bottom: solid 1px rgba(0, 255, 42, 0.6);
 }
 
-/* line 240, ../scss/_base.scss */
+/* line 246, ../scss/_base.scss */
 .title {
   font-family: 'grobe';
   font-size: 4.5vw;
@@ -234,7 +239,7 @@ li {
   margin-left: 7vw;
   color: rgba(245, 1, 73, 0.35);
 }
-/* line 253, ../scss/_base.scss */
+/* line 259, ../scss/_base.scss */
 .title h3 {
   color: white;
   font-size: 4.5vw;
@@ -244,13 +249,13 @@ li {
   margin-left: 4vw;
 }
 
-/* line 265, ../scss/_base.scss */
+/* line 271, ../scss/_base.scss */
 .title:hover {
   display: flex;
   align-items: center;
   color: rgba(65, 35, 91, 0.6);
 }
-/* line 269, ../scss/_base.scss */
+/* line 275, ../scss/_base.scss */
 .title:hover h3 {
   color: white;
   opacity: 1;
@@ -258,19 +263,19 @@ li {
   border-bottom: solid 1px rgba(0, 255, 42, 0.6);
 }
 
-/* line 277, ../scss/_base.scss */
+/* line 283, ../scss/_base.scss */
 .dyk {
   color: rgba(245, 1, 73, 0.7);
   font-family: "circular-italic";
   font-size: 25px;
 }
 
-/* line 283, ../scss/_base.scss */
+/* line 289, ../scss/_base.scss */
 p.vis {
   color: #856a98;
 }
 
-/* line 288, ../scss/_base.scss */
+/* line 294, ../scss/_base.scss */
 img {
   max-width: 100%;
   height: auto;
@@ -280,7 +285,7 @@ img {
   display: none;
 }
 
-/* line 298, ../scss/_base.scss */
+/* line 304, ../scss/_base.scss */
 p.source {
   font-family: "circular-italic";
   font-size: 12px;
@@ -289,29 +294,29 @@ p.source {
 
 /* Small Devices, Tablets */
 @media only screen and (max-width: 920px) {
-  /* line 314, ../scss/_base.scss */
+  /* line 320, ../scss/_base.scss */
   header h1 {
     color: white;
   }
 }
 @media only screen and (max-width: 768px) {
-  /* line 325, ../scss/_base.scss */
+  /* line 331, ../scss/_base.scss */
   body {
     background-position: top left;
   }
 }
 /* Extra Small Devices, Phones */
 @media only screen and (max-width: 480px) {
-  /* line 334, ../scss/_base.scss */
+  /* line 340, ../scss/_base.scss */
   ul {
     top: 110px;
   }
 
-  /* line 338, ../scss/_base.scss */
+  /* line 344, ../scss/_base.scss */
   header {
     color: white;
   }
-  /* line 340, ../scss/_base.scss */
+  /* line 346, ../scss/_base.scss */
   header h1 {
     width: 26vw;
     font-size: 8vw;
@@ -319,34 +324,34 @@ p.source {
     color: white;
   }
 
-  /* line 348, ../scss/_base.scss */
+  /* line 354, ../scss/_base.scss */
   body {
     background-position: top left;
   }
 
-  /* line 352, ../scss/_base.scss */
+  /* line 358, ../scss/_base.scss */
   li {
     padding: 0vw 11vw;
   }
 
-  /* line 357, ../scss/_base.scss */
+  /* line 363, ../scss/_base.scss */
   .title {
     font-size: 8vw;
     margin-top: 20px;
   }
-  /* line 360, ../scss/_base.scss */
+  /* line 366, ../scss/_base.scss */
   .title h3 {
     margin-left: 30px;
     margin-right: 30px;
     font-size: 8vw;
   }
 
-  /* line 366, ../scss/_base.scss */
+  /* line 372, ../scss/_base.scss */
   .activesection {
     font-size: 8vw;
     margin-top: 20px;
   }
-  /* line 369, ../scss/_base.scss */
+  /* line 375, ../scss/_base.scss */
   .activesection h3 {
     font-size: 8vw;
     margin-left: 30px;
